# SceneStructNet

./: .gitignore  README.md  main.py  pyproject.toml
crawler/google_image/: __init__.py  crawler.py  models.py
crawler/pinterest/: ___init__.py  cookies.py  crawler.py  models.py
line_detector/: README.md  __init__.py  config.py  evaluate.py  inference.py  prepare_data.py  train.py
line_detector/data/: dataset.py  transforms.py
line_detector/losses/: focal.py
line_detector/metrics/: sap.py
line_detector/models/: backbone.py  fpn.py  head.py  line_det.py
line_detector/utils/: visualization.py
notebooks/: Background_segmentation_YOLO26.ipynb  LINEA_Line_Auto_Labeling.ipynb  Line_Detector_Finetuning_LINEA.ipynb  Sam3_auto_labeling.ipynb  Train_Line_Detector_Custom_MobilenetV3.ipynb  data-crawler.ipynb  eda_scenestruct_dataset.ipynb  split_dataset.ipynb  yolo_segmentation_training.ipynb  yolo_to_cvat.ipynb
utils/: convert_cvat_to_linea.py
