[project]
name = "scenestructnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx[http2]>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "tenacity>=8.2.0",
    "gallery-dl>=1.31.7",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
    "scipy>=1.17.1",
]
